<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SaveTrack</string>
    <string name="HELLO">Hola Dr. Mundo</string>

    <!-- Login & Profile -->
    <string name="IniSes">Iniciar Sesión</string>
    <string name="INISES">INICIAR SESIÓN</string>
    <string name="IniReg">Registrarse</string>
    <string name="SinCuenta">NO TENGO CUENTA</string>
    <string name="ConCuenta">YA TENGO CUENTA</string>
    <string name="OlviContra">OLVIDÉ MI CONTRASEÑA</string>
    <string name="TextLogin">¡Inicia Sesión en SaveTrack!</string>
    <string name="TextRegister">¡Crea tu cuenta de SaveTrack!</string>
    <string name="TextOlvido">¡Reestablece tu contraseña de SaveTrack!</string>
    <string name="perfil">Perfil</string>

    <string name="Email">Usuario</string>
    <string name="EMAIL">USUARIO</string>
    <string name="Password">Contraseña</string>
    <string name="PASSWORD">CONTRASEÑA</string>
    <string name="phone">E-Mail</string>
    <string name="PHONE">E-MAIL</string>
    <string name="pin">Pin de Confirmación</string>
    <string name="PIN">PIN DE CONFIRMACIÓN</string>
    <string name="CPassword">Confirmar Contraseña</string>
    <string name="CPASSWORD">CONFIRMAR CONTRASEÑA</string>
    <string name="CaPassword">Reestablecer Contraseña</string>
    <string name="CAPASSWORD">REESTABLECER CONTRASEÑA</string>
    <string name="EnvSMS">Enviar Correo</string>
    <string name="ENVSMS">ENVIAR CORREO</string>
    <string name="Regresar">Regresar</string>
    <string name="REGRESAR">REGRESAR</string>

    <string name="Nombre">Nombre</string>
    <string name="Apellido">Apellido</string>
    <string name="Edad">Edad</string>
    <string name="SEXO">Género</string>

    <string name="TipoChamba">Tipo de Ingreso</string>
    <string name="Salario">Salario</string>
    <string name="Ingresoirregular">Venta</string>
    <string name="Beca">Beca</string>
    <string name="Pension">Pensión</string>
    <string name="Manutencion">Manutención</string>
    <string name="Ingresopasivo">Ingreso pasivo</string>


    <string name="FotoPerfil">Foto de Perfil</string>
    <string name="Grupos">Grupos</string>
    <string name="Grupo1">Fiesta</string>
    <string name="Grupo2">Familia</string>
    <string name="Grupo3">Trabajo</string>

    <string name="NewGrupo">Grupo nuevo</string>
    <string name="NomGrupo">Nombre del Grupo</string>
    <string name="TipoGrupo">Tipo</string>
    <string name="Miembros">Miembros</string>

    <!-- Record -->
    <string name="Dia">Día</string>
    <string name="Mes">Mes</string>
    <string name="Anyo">Año</string>
    <string name="Fecha">Fecha</string>
    <string name="Label">Etiquetas</string>

    <!-- Index -->
    <string name="Ingreso">Ingreso</string>
    <string name="Gasto">Gasto</string>
    <string name="Monto">Monto</string>
    <string name="NewMonto">Nuevo Monto</string>
    <string name="Debt">Por pagar</string>
    <string name="ToDoList">Mandados</string>

    <string name="NomMonto">Nombre del nuevo Monto</string>
    <string name="QuaMonto">Cantidad del nuevo Monto</string>
    <string name="TipoMonto">Tipo del nuevo Monto</string>

    <!-- Savetracks -->
    <string name="PPP">Producto por pagar</string>
    <string name="EPP">En proceso de pago</string>

    <!-- Finances -->
    <string name="CyS">Consejos y Sugerencias</string>
    <string name="Consejos">Consejos</string>
    <string name="Sugerencias">Sugerencias</string>
    <string name="Stats">Información Ahorro</string>
    <string name="ESTATICO">Estático</string>
    <string name="INVERSION">Inversión</string>
    <string name="MONEDA">Moneda</string>
    <string name="DIVISA">Divisa</string>

    <!-- Otros -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="textview">TextView</string>
    <string name="ocupation">Ocupation</string>
    <string name="dias_ahorrando">Dias Ahorrando</string>
    <string name="editar">Editar</string>
    <string name="balance">Balance</string>
    <string name="starting">Starting</string>
    <string name="medidor_de_ahorro">Medidor de Ahorro</string>
    <string name="configuracion">Configuración</string>
    <string name="nuevo_ingreso">Nuevo Ingreso</string>
    <string name="nuevo_gasto">Nuevo Gasto</string>
    <string name="Concepto">Concepto</string>
    <string name="Valor">Valor</string>
    <string name="Frecuencia">Frecuencia</string>
    <string name="Tipo">Tipo</string>
    <string name="Etiqueta">Etiqueta</string>
    <string name="Cancelar">Cancelar</string>
    <string name="confirmar">Confirmar</string>
    <string name="goback">Go back</string>
    <string name="Interes">Interés en %</string>
    <string name="buscar">Buscar</string>
    <string name="gastos">Gastos</string>
    <string name="total_de_ingresos">Total de ingresos:</string>
    <string name="total_de_gastos">Total de gastos</string>
    <string name="veces">Veces</string>
    <string name="deuda">Deuda</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="venta">Venta</string>
    <string name="no_hay_nada_por_pagar_hoy">No hay nada por pagar hoy</string>
    <string name="papelera">Papelera</string>
    <string name="ingresos">Ingresos</string>
    <string name="actualizarm">Actualizar Monto</string>
    <string name="addm">Añadir Monto</string>
    <string name="porpagar">Para pagar HOY</string>
    <string name="editperfil">Editar Perfil</string>
    <string name="guardados">guardados</string>
    <string name="etiquetas">Etiquetas</string>
    <string name="categoria">Categoría</string>
    <string name="color">Color</string>
    <string name="esdeuda">Deuda</string>
    <string name="favoritos">Favoritos</string>
    <string name="agregado">Agregado</string>
    <string name="addlabel">Nueva Etiqueta</string>
    <string name="editlabel">Editar Etiqueta</string>
    <string name="vermas">Ver más</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="vermenos">Ver menos</string>
    <string name="nover">No ver</string>
    <string name="consejos_y_sugerencias">Consejos y Sugerencias</string>
    <string name="consejos">Consejos</string>
    <string name="economia">Economía</string>
    <string name="percent">Porcentaje</string>
    <string name="Meta">Meta</string>
    <string name="skip">Skip</string>
    <string name="rango">15</string>
    <string name="rangotv">Días:</string>
    <string name="ValorFinal">Valor / Final</string>
    <string name="ConceptoInteres">Concepto / Interés</string>
    <string name="escompuesto">Interés Compuesto</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="modo">Modo</string>
    <string name="faq">FAQ</string>
    <string name="madeby">Hecho con amor por</string>
    <string name="creator">hector8heredia@gmail.com y lamc1211@hotmail.com</string>
    <string name="nuevo_evento">Nuevo Evento</string>
    <string name="adde">Añadir Evento</string>
    <string name="evento">Evento</string>
    <string name="eventos">Eventos</string>
    <string name="updatee">Actualizar Evento</string>
    <string name="elegir">Elegir</string>
    <string name="descripcion">Descripción</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="manual">Manual</string>
    <string name="nada" />
    <string name="Grupo">Grupo</string>
    <string name="addg">Crear Grupo</string>
    <string name="descripciong">Descripción de no más de 100 caracteres</string>
    <string name="admin">Admin</string>
    <string name="compartir">Compartir</string>
    <string name="montos">Montos</string>
    <string name="dinero">$</string>
    <string name="createdat">Created At</string>
    <string name="viewg">Ver Grupo</string>
    <string name="aporte">Aporte</string>
    <string name="eliminar">Eliminar</string>
    <string name="editg">Editar Grupo</string>
    <string name="graficapersonalizada">Gráfica Personalizada</string>
    <string name="porcentaje">%</string>
    <string name="Valor2">Valor 2</string>
    <string name="calcular">Calcular</string>
    <string name="graficar">Graficar</string>
    <string name="historial">Historial</string>
    <string name="index">Index</string>
    <string name="pda">Planes de Ahorro</string>
    <string name="finanzas">Finanzas</string>
    <string name="opciones">Opciones</string>
    <string name="mandados">Mandados</string>
    <string name="por_pagar">Por pagar</string>
    <string name="a_adir_monto">Añadir Monto</string>
    <string name="lista_de_egresos">Lista de Egresos</string>
    <string name="lista_de_ingresos">Lista de Ingresos</string>
    <string name="deudas">Deudas</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="inicio">Inicio</string>
    <string name="liquidar">Liquidar</string>
    <string name="restaurar">Restaurar</string>
    <string name="pagar">Pagar</string>
    <string name="addingresoswidget">Añadir widget de ingreso</string>
    <string name="addgastoswidget">Añadir widget de gasto</string>
    <string name="usuarios">Usuarios</string>
    <string name="metadeahorro">Meta de Ahorro</string>
    <string name="verdetalles">Ver Detalles</string>

    <!-- Spinners -->
    <string-array name="etiquetaoptions">
        <item>Seleccionar</item>
        <item>Alimento</item>
        <item>Hogar</item>
        <item>Bienestar</item>
        <item>Otras necesidades</item>
        <item>Gasto hormiga</item>
        <item>Ocio y demás</item>
        <item>Obsequio</item>
    </string-array>
    <string-array name="tipooptions">
        <item>Seleccionar</item>
        <item>Salario</item>
        <item>Venta</item>
        <item>Beca</item>
        <item>Pensión</item>
        <item>Manutención</item>
        <item>Ingreso pasivo</item>
        <item>Regalo</item>
    </string-array>
    <string-array name="frecuenciaoptions">
        <item>Seleccionar</item>
        <item>Única vez</item>
        <item>Diario</item>
        <item>Semanal</item>
        <item>Quincenal</item>
        <item>Mensual</item>
        <item>Bimestral</item>
        <item>Trimestral</item>
        <item>Cuatrimestral</item>
        <item>Semestral</item>
        <item tools:ignore="Typos">Anual</item>
    </string-array><string-array name="frecuenciaoptionseventos">
        <item>Seleccionar</item>
        <item>Única vez</item>
        <item>Mensual</item>
        <item>Bimestral</item>
        <item>Trimestral</item>
        <item>Cuatrimestral</item>
        <item>Semestral</item>
        <item tools:ignore="Typos">Anual</item>
    </string-array>
</resources>