<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_perfil"
        android:icon="@drawable/ic_person"
        android:title="@string/perfil" />
    <item
        android:id="@+id/menu_item_historial"
        android:icon="@drawable/ic_history"
        android:title="@string/historial" />
    <item
        android:id="@+id/menu_item_index"
        android:icon="@drawable/ic_index"
        android:title="@string/inicio" />
    <item
        android:id="@+id/menu_item_pda"
        android:icon="@drawable/ic_savingplans"
        android:title="@string/pda" />
    <item
        android:id="@+id/menu_item_finanzas"
        android:icon="@drawable/ic_finance"
        android:title="@string/finanzas" />
</menu>
