<TableRow
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cabezaingresos"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/p1midcell"
    android:orientation="horizontal"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/IConcepto"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/Concepto"
        android:paddingStart="7dp"
        android:textColor="?attr/colorOnPrimary"
        android:textColorHint="?attr/colorSecondary"
        android:textSize="14sp"
        android:layout_weight="4"/>


    <TextView
        android:id="@+id/IValor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Valor"
        android:textAlignment="center"
        android:paddingStart="15dp"
        android:textColor="?attr/colorOnPrimary"
        android:textColorHint="?attr/colorSecondary"
        android:textSize="14sp"
        android:layout_weight="3"/>

    <TextView
        android:id="@+id/IFecha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Fecha"
        android:textAlignment="center"
        android:paddingStart="15dp"
        android:textColor="?attr/colorOnPrimary"
        android:textColorHint="?attr/colorSecondary"
        android:textSize="14sp"
        android:layout_weight="4"/>

    <TextView
        android:id="@+id/IEtiqueta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Etiqueta"
        android:textAlignment="center"
        android:paddingEnd="7dp"
        android:textColor="?attr/colorOnPrimary"
        android:textColorHint="?attr/colorSecondary"
        android:textSize="14sp"
        android:layout_weight="4"/>

    <Button
        android:id="@+id/itemOptions"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginEnd="7dp"
        android:background="@drawable/ic_list"
        android:backgroundTint="?attr/colorOnPrimary"
        android:layout_weight="1" />
</TableRow>