<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/finanzas_background"
        android:contentDescription="@string/wallpaper" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/calendarContainer"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        app:layout_constraintTop_toBottomOf="@id/ConfigButton"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp" >
        <androidx.viewpager.widget.ViewPager
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/goback"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/transparent"
        android:contentDescription="@string/goback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back"
        app:tint="?attr/colorOnPrimary" />

    <TextView
        android:id="@+id/bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Mes"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="36sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/goback" />

    <ImageButton
        android:id="@+id/AgregarEventoButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/confshape"
        android:contentDescription="@string/nuevo_evento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calendarContainer"
        app:srcCompat="@drawable/ic_add"
        app:tint="@color/G1" />

    <ImageButton
        android:id="@+id/ConfigButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/transparent"
        app:srcCompat="@drawable/ic_settings"
        android:contentDescription="@string/configuracion" />


</androidx.constraintlayout.widget.ConstraintLayout>