<TableRow
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cabezaingresos"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/y1midcell"
    android:orientation="horizontal"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/FConcepto"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:minHeight="35dp"
        android:hint="@string/Concepto"
        android:paddingStart="7dp"
        android:textColor="?attr/colorOnPrimary"
        android:textColorHint="?attr/colorSecondary"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/FValor"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:minHeight="35dp"
        android:hint="@string/Valor"
        android:textAlignment="textEnd"
        android:paddingStart="15dp"
        android:textColor="?attr/colorOnPrimary"
        android:textColorHint="?attr/colorSecondary"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/FFecha"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:hint="@string/Fecha"
        android:textAlignment="textEnd"
        android:paddingStart="15dp"
        android:textColor="?attr/colorOnPrimary"
        android:textColorHint="?attr/colorSecondary"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/FEtiqueta"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:hint="@string/Etiqueta"
        android:layout_marginStart="15dp"
        android:textAlignment="textEnd"
        android:paddingEnd="7dp"
        android:textColor="?attr/colorOnPrimary"
        android:textColorHint="?attr/colorSecondary"
        android:textSize="14sp" />

    <Button
        android:id="@+id/favMonto"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:background="@drawable/ic_notstar"
        android:backgroundTint="?attr/colorOnPrimary" />

    <Button
        android:id="@+id/editMonto"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:background="@drawable/ic_edit"
        android:backgroundTint="?attr/colorOnPrimary" />
</TableRow>