<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_index">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:id="@+id/cabezaingresos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="0,1,2,3"
                android:layout_marginStart="10dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="75dp"
                app:layout_constraintTop_toTopOf="parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/p1topcell"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/HConcepto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/Concepto"
                        android:textColor="@color/P5"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/HValor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/Valor"
                        android:textColor="@color/P5"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/HFecha"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/Fecha"
                        android:textColor="@color/P5"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/HEtiqueta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/Etiqueta"
                        android:textAlignment="textEnd"
                        android:textColor="@color/P5"
                        android:textSize="18sp" />

                </TableRow>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/displayGastos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintStart_toStartOf="@+id/cabezaingresos"
                    app:layout_constraintTop_toBottomOf="@+id/cabezaingresos" />
            </TableLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/ConfigButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/configuracion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_settings" />

        <ImageButton
            android:id="@+id/goback"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/transparent"
            android:contentDescription="@string/goback"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back" />

        <ImageButton
            android:id="@+id/Confirm"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/confshape"
            android:contentDescription="@string/confirmar"
            app:layout_constraintBottom_toTopOf="@id/Cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.767"
            app:srcCompat="@drawable/ic_confirm" />

        <ImageButton
            android:id="@+id/Cancel"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/cancshape"
            android:contentDescription="@string/Cancelar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.949"
            app:srcCompat="@drawable/ic_cancel" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
