<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="@drawable/gradient_background_reg">

    <TextView
        android:paddingTop="10dp"
        android:id="@+id/textview_Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/TextRegister"
        android:textColor="@color/X1"
        android:textAlignment="center"
        android:textSize="36sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="44dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:background="@drawable/p1backbox"
        android:fontFamily="sans-serif-black"
        android:text="@string/IniReg"
        android:textColor="@color/X1"
        app:layout_constraintBottom_toTopOf="@+id/buttonConCuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegConPass"
        app:layout_constraintVertical_bias="0.711" />

    <EditText
        android:id="@+id/RegPass"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:autofillHints="@string/PASSWORD"
        android:background="@drawable/p1backbox"
        android:ems="10"
        android:hint="@string/PASSWORD"
        android:inputType="textPassword"
        android:padding="10sp"
        android:text=""
        android:textColor="@color/X1"
        android:textColorHint="@color/X1"
        app:layout_constraintBottom_toTopOf="@+id/RegConPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEmail" />

    <EditText
        android:id="@+id/textEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:autofillHints="@string/phone"
        android:background="@drawable/p1backbox"
        android:ems="10"
        android:hint="@string/PHONE"
        android:inputType="textEmailAddress"
        android:padding="10sp"
        android:textColor="@color/X1"
        android:textColorHint="@color/X1"
        app:layout_constraintBottom_toTopOf="@+id/RegPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegCorreo" />

    <EditText
        android:id="@+id/RegConPass"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:autofillHints="@string/CPASSWORD"
        android:background="@drawable/p1backbox"
        android:ems="10"
        android:hint="@string/CPASSWORD"
        android:inputType="textPassword"
        android:padding="10sp"
        android:textColor="@color/X1"
        android:textColorHint="@color/X1"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegPass"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/RegCorreo"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:autofillHints="@string/EMAIL"
        android:background="@drawable/p1backbox"
        android:ems="10"
        android:hint="@string/EMAIL"
        android:inputType="textPersonName"
        android:padding="10sp"
        android:textColor="@color/X1"
        android:textColorHint="@color/X1"
        app:layout_constraintBottom_toTopOf="@+id/textEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/buttonConCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fontFamily="sans-serif-black"
        android:hint="@string/ConCuenta"
        android:textColorHint="@color/X0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_Register"
        app:layout_constraintVertical_bias="0.989" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="164dp"
        android:layout_height="159dp"
        android:contentDescription="@string/TextRegister"
        app:layout_constraintBottom_toTopOf="@+id/RegCorreo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_Register"
        app:layout_constraintVertical_bias="0.382"
        app:srcCompat="@drawable/logo" />
</androidx.constraintlayout.widget.ConstraintLayout>